# psp22-example

./: .gitignore  README.md
.github/workflows/: checks.yml
client-cli/: Cargo.toml  README.md  metadata.json  rustfmt.toml
client-cli/src/: actions.rs  cli.rs  commands.rs  contracts.rs  main.rs  ownable.rs  psp22_example.rs
client-cli/src/actions/: ownable.rs  psp22.rs
client-cli/src/commands/: ownable.rs  psp22.rs
client-cli/src/contracts/: ownable.rs  psp22.rs
contracts/: Cargo.toml  README.md  lib.rs  rust-toolchain  setup.sh
