[package]
name = "psp22-example-client"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shellexpand = "2.1.2"

aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node/", rev = "09012bc" }
