[package]
name = "psp22_example"
version = "0.1.0"
authors = ["Cardinals Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Brush dependency
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22", "ownable"] }

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info",
  "scale-info/std",

  # Brush dependency
  "openbrush/std",
]
ink-as-dependency = []

[lib]
name = "psp22_example"
path = "lib.rs"
